# sre-agent

./: .env.docker.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh  test-backend.sh
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  documents.py  k8s.py
backend/app/services/: ai_agent.py  document_service.py  k8s_client.py
backend/src/sre_agent_backend/: __init__.py
docs/runbooks/: high-memory-usage.md  pod-crashloop.md
example-manifests/: README.md  example-configmap.yaml  example-deployment.yaml  example-pod.yaml  example-service.yaml
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
