[project]
name = "sre-agent-backend"
version = "0.1.0"
description = "SRE AI Agent Backend"
readme = "README.md"
authors = [
    { name = "Norman Shipman", email = "norman@nshipman.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "kubernetes>=29.0.0",
    "pydantic-ai>=1.9.0",
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
]

